    some but not all imported categories are compiled for static binding.

    Corrected a event handling bug in the processing of meta-calls whose
    meta-arguments have the format Object::Closure.

    Corrected a bug in the runtime error handler for top-level message sending
    calls where the reported exception term context argument would be unbound.

    Corrected a bug in the compilation of user multifile directives and user
    multifile predicates within objects and categories.

    Corrected a secure meta-predicate compilation bug when using static
    binding to optimize a call to a local meta-predicate made by a normal,
    public predicate.

    Added a monitor/1 predicate to the library event registry objects.
    Updated the definition of the monitors/1 and monitored/1 predicates
    in order to avoid using the non-standard predicate sort/2.

    Added support for adding the Logtalk mime-type to systems supporting
    the freedesktop.org shared mime-info database.

    Added support for adding the Logtalk mime-type and the file description
    for Logtalk source files to the Windows installer.

    Updated the RPM spec file and build script to no longer require root
    access. The RPM package built from these files is no longer relocatable.

    Updated the POSIX (un)install shell scripts to print the version number
    of the Logtalk release being (un)installed.

    Updated the "lgt2pdf.sh" and "lgt2txt.sh" POSIX shell scripts in order
    to prevent accidental deletion of the "logtal.dtd" and "logtalk.xsd"
    files in the Logtalk installation directory. Thanks to Michael Igler
    for the bug report.

    Added information about using the Sublime Text Windows text editor for
    editing Logtalk source files.

    Updated documentation in order to remove references to deprecated syntax
    for sequences of predicate indicators in predicate directives. Updated 
    documentation on built-in meta-predicates to correctly described their