@@ -1,0 +1,16 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.37.5
+
+Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+To load this example and for sample queries, please see the SCRIPT.txt file.
+
+This example illustrates how to use multifile predicates within Logtalk objects
+and categories. Note, however, that a back-end Prolog compiler also supporting
+multifile directives and predicates is required to run this example.
