@@ -1,0 +1,26 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.37.5
+
+Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+% start by loading the example and the required library files:
+
+| ?- logtalk_load(multifile(loader)).
+...
+
+
+% call the multifile predicate:
+
+| ?- main::a(X).
+X = 1 ;
+X = 2 ;
+X = 3 ;
+X = 4 ;
+X = 5
+true
