@@ -1,0 +1,2 @@
+
+:- initialization(logtalk_load(multifile)).
