@@ -77,6 +77,7 @@
 	assertz(logtalk_library_path(modules, examples('modules/'))),
 	assertz(logtalk_library_path(msglog, examples('msglog/'))),
 	assertz(logtalk_library_path(mtbatch, threads('mtbatch/'))),
+	assertz(logtalk_library_path(multifile, examples('multifile/'))),
 	assertz(logtalk_library_path(nondet, threads('nondet/'))),
 	assertz(logtalk_library_path(operators, examples('operators/'))),
 	assertz(logtalk_library_path(parametric, examples('parametric/'))),
